# llm-quantization-benchmark

./: .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/_report/: research_report.md
docs/test_results/: coverage_summary.txt  pytest_output.txt  quality_gates.txt
results/: Qwen_Qwen2.5-0.5B-Instruct__fp16.json
results/_style/: repo.mplstyle
src/qs/: runner.py  types.py
src/qs/cli/: main.py
src/qs/evals/: latency.py  perplexity.py
src/qs/recipes/: loader.py  registry.py
src/qs/viz/: charts.py
tests/: test_charts.py  test_registry.py
