[project]
name = "qs"
version = "0.8.0"
description = "Quantization suite: GPTQ, AWQ, bitsandbytes 4-bit, FP4. Perplexity + accuracy + size + latency ablations."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Akshitha Reddy Lingampally" }]
keywords = ["quantization", "gptq", "awq", "bitsandbytes", "llm-inference"]

dependencies = [
    "transformers>=4.45,<5",
    "torch>=2.2",
    "accelerate>=0.30",
    "datasets>=2.19,<3",
    "numpy>=1.26,<2",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "typer>=0.12",
    "pydantic>=2.7",
    "loguru>=0.7",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8","pytest-cov>=5","ruff>=0.5","mypy>=1.10","types-PyYAML","types-tqdm"]

[project.scripts]
qs = "qs.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qs"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E","W","F","I","B","UP","SIM","RUF"]
ignore = ["E501","B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
ignore_missing_imports = true
exclude = ["build/","dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = ["slow: tests that quantize models", "needs_gpu: GPU-only tests"]
